ccmback/compiler/result/user.txt
  File "./data/user.py", line 1
    print'hello,world!\n')
         ^
SyntaxError: invalid syntax
